syntax = "proto3";

message NetMsg{
    string Content = 1;
}