syntax = "proto3";

message C2SDailyAsk{
    string Content=1;
}

message S2CDailyAsk{
    string Content=2;
}