syntax = "proto3";
import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions{
    string net_req_proto = 1201;
    string net_rsp_proto = 1202;
}
